# amor

./: .gitignore  .kde-ci.yml  AmorIface.h  CMakeLists.txt  ExtraDesktop.sh  Makefile.am  Messages.sh  README.md  TODO  amor.cpp  amor.desktop  amor.h  amor.kdelnk  amor.xpm  amoradaptor.cpp  amoradaptor.h  amoranim.cpp  amoranim.h  amorbubble.cpp  amorbubble.h  amorconfig.cpp  amorconfig.h  amordialog.cpp  amordialog.h  amorpm.cpp  amorpm.h  amortips.cpp  amortips.h  amorwidget.cpp  amorwidget.h  configure.in.in  main.cpp  mini-amor.xpm  preparetips  snapcraft.yaml  version.h
data/: CMakeLists.txt  Makefile.am  billyrc  blobrc  bonhommerc  brc  bsdrc  eyesrc  ghostrc  nekokurorc  nekorc  pingurc  taorc  tips-en  tips-fr  tuxrc  wormrc
data/b/: Makefile.am  b-f.xpm  b-f2.xpm  b1-r.xpm  b1.xpm  b2-r.xpm  b2.xpm  b3-r.xpm  b3.xpm  b4-r.xpm  b4.xpm  bcol1.xpm  bcol2.xpm  bdrib1.xpm  bdrib2.xpm  bdrib3.xpm  bdrib4.xpm  bdrib5.xpm  bdrib6.xpm  bdrib7.xpm  bdrop.xpm  bgo1.xpm  bgo2.xpm  bgo3.xpm  bgo4.xpm  bgo5.xpm  bgo6.xpm  bgo7.xpm  bh1.xpm  bpof1.xpm  bpof2.xpm  bpof3.xpm  bpof4.xpm  bpof5.xpm  bpof6.xpm  sa1.xpm  sa2.xpm  sa2a.xpm  sa2b.xpm  sa2c.xpm  (+2 more)
data/blob/: Makefile.am  blob.xcf  blob.xpm  blob_BeamDown1.xpm  blob_BeamDown2.xpm  blob_BeamDown3.xpm  blob_BeamDown4.xpm  blob_BeamDown5.xpm  blob_BeamDown6.xpm  blob_BeamDown7.xpm  blob_BeamDown8.xpm  blob_BeamDown9.xpm  blob_BeamUp1.xpm  blob_BeamUp10.xpm  blob_BeamUp2.xpm  blob_BeamUp3.xpm  blob_BeamUp4.xpm  blob_BeamUp5.xpm  blob_BeamUp6.xpm  blob_BeamUp7.xpm  blob_BeamUp8.xpm  blob_BeamUp9.xpm  blob_b1.xpm  blob_b2.xpm  blob_e1.xpm  blob_ex1.xpm  blob_f1.xpm  blob_f2.xpm  blob_f3.xpm  blob_fire10.xpm  blob_fire11.xpm  blob_fire2.xpm  blob_fire3.xpm  blob_fire4.xpm  blob_fire5.xpm  blob_fire6.xpm  blob_fire7.xpm  blob_fire8.xpm  blob_fire9.xpm  blob_g1.xpm  (+43 more)
data/eyes/: Makefile.am  eye_1.xpm  eye_2.xpm  eye_b.xpm  eye_d.xpm  eye_e.xpm  eye_h1.xpm  eye_h2.xpm  eye_h3.xpm  eye_h4.xpm  eye_l.xpm  eye_m1.xpm  eye_m2.xpm  eye_m3.xpm  eye_m4.xpm  eye_m5.xpm  eye_m6.xpm  eye_m7.xpm  eye_s1.xpm  eye_s2.xpm  eye_s3.xpm  eye_s4.xpm  eye_u.xpm  eye_z1.xpm  eye_z2.xpm  eye_z3.xpm  eye_z4.xpm  eye_z5.xpm
data/ghost/: Makefile.am  ghost.xcf  ghost_1.xpm  ghost_2.xpm  ghost_e.xpm  ghost_m1.xpm  ghost_m2.xpm  ghost_m3.xpm  ghost_m4.xpm  ghost_m5.xpm  ghost_m6.xpm  ghost_m7.xpm  ghost_z1.xpm  ghost_z2.xpm  ghost_z3.xpm  ghost_z4.xpm  ghost_z5.xpm
data/icons/: CMakeLists.txt
data/neko/: Makefile.am  claw1.xpm  claw2.xpm  jump1.xpm  jump2.xpm  jump3.xpm  jump4.xpm  jumpl1.xpm  jumpl2.xpm  jumpl3.xpm  jumpl4.xpm  lick.xpm  lick2.xpm  run1.xpm  run2.xpm  run3.xpm  run4.xpm  scratch1.xpm  scratch2.xpm  scratch3.xpm  scratch4.xpm  sit.xpm  sitleft.xpm  sleep1.xpm  sleep2.xpm  surprise.xpm  tail.xpm  yawn.xpm
data/pics/: CMakeLists.txt  Makefile.am
data/pics/animated/: CMakeLists.txt  Makefile.am
data/pics/animated/blob/: CMakeLists.txt  Makefile.am
data/pics/animated/bonhomme/: CMakeLists.txt  Makefile.am
data/pics/animated/eyes/: CMakeLists.txt  Makefile.am
data/pics/animated/ghost/: CMakeLists.txt  Makefile.am
data/pics/animated/neko/: CMakeLists.txt  Makefile.am
data/pics/animated/neko-kuro/: CMakeLists.txt
data/pics/animated/pingu/: CMakeLists.txt  Makefile.am
data/pics/animated/tao/: CMakeLists.txt  Makefile.am
data/pics/animated/worm/: CMakeLists.txt  Makefile.am
data/pics/preview/: CMakeLists.txt  Makefile.am
data/pics/static/: CMakeLists.txt  Makefile.am
data/pingu/: AUTHORS  Makefile.am  bash_l1.xpm  bash_l10.xpm  bash_l11.xpm  bash_l12.xpm  bash_l2.xpm  bash_l3.xpm  bash_l4.xpm  bash_l5.xpm  bash_l6.xpm  bash_l7.xpm  bash_l8.xpm  bash_l9.xpm  bash_r1.xpm  bash_r10.xpm  bash_r11.xpm  bash_r12.xpm  bash_r2.xpm  bash_r3.xpm  bash_r4.xpm  bash_r5.xpm  bash_r6.xpm  bash_r7.xpm  bash_r8.xpm  bash_r9.xpm  blocker1.xpm  blocker2.xpm  blocker3.xpm  blocker4.xpm  blocker5.xpm  blocker6.xpm  bomber1.xpm  bomber10.xpm  bomber11.xpm  bomber12.xpm  bomber13.xpm  bomber14.xpm  bomber15.xpm  bomber16.xpm  (+62 more)
data/static/: Makefile.am
data/tao/: Makefile.am  yy-1.xpm  yy-2.xpm  yy-3.xpm  yy-4.xpm  yy-5.xpm  yy-6.xpm  yy-7.xpm  yy-8.xpm  yy-9.xpm  yy.xpm  yy105.xpm  yy120.xpm  yy135.xpm  yy15.xpm  yy150.xpm  yy165.xpm  yy180.xpm  yy195.xpm  yy210.xpm  yy225.xpm  yy240.xpm  yy255.xpm  yy270.xpm  yy285.xpm  yy30.xpm  yy300.xpm  yy315.xpm  yy330.xpm  yy345.xpm  yy45.xpm  yy60.xpm  yy75.xpm  yy90.xpm  yyx10.xpm  yyx12.xpm  yyx14.xpm  yyx16.xpm  yyx18.xpm  yyx20.xpm  (+7 more)
data/worm/: Makefile.am  w-a1.xpm  w-a2.xpm  w-b1.xpm  w-b2.xpm  w-be1.xpm  w-be2.xpm  w-be3.xpm  w-be4.xpm  w-d1.xpm  w-d2.xpm  w-d3.xpm  w-d4.xpm  w-d5.xpm  w-dr1.xpm  w-e1.xpm  w-l1.xpm  w-l2.xpm  w-l3.xpm  w-ml0.xpm  w-ml1.xpm  w-ml2.xpm  w-ml3.xpm  w-mr0.xpm  w-mr1.xpm  w-mr2.xpm  w-mr3.xpm  w-s1.xpm  w-s2.xpm  w-s3.xpm  w-u1.xpm  w-u2.xpm  w-u3.xpm  w-wl1.xpm  w-wl2.xpm  w-wr1.xpm  w-wr2.xpm
doc/: CMakeLists.txt  Makefile.am  index.docbook  man-amor.6.docbook
doc/en/: Makefile.am
po/af/: amor.po
po/ar/: amor.po
po/be/: amor.po
po/bg/: amor.po
po/bn/: amor.po
po/br/: amor.po
po/bs/: amor.po
po/ca/: amor.po
po/ca@valencia/: amor.po
po/cs/: amor.po
po/cy/: amor.po
po/da/: amor.po
po/de/: amor.po
po/el/: amor.po
po/en_GB/: amor.po
po/eo/: amor.po
po/es/: amor.po
po/et/: amor.po
po/eu/: amor.po
po/fa/: amor.po
po/fi/: amor.po
po/fr/: amor.po
po/ga/: amor.po
po/gl/: amor.po
po/he/: amor.po
po/hi/: amor.po
po/hne/: amor.po
po/hr/: amor.po
po/hu/: amor.po
po/ia/: amor.po
po/is/: amor.po
po/it/: amor.po
src/: CMakeLists.txt  amor.cpp  amor.desktop  amor.h  amoranim.cpp  amoranim.h  amoranimation.cpp  amoranimation.h  amorbubble.cpp  amorbubble.h  amorconfig.cpp  amorconfig.h  amordialog.cpp  amordialog.h  amorpixmapmanager.cpp  amorpixmapmanager.h  amorpm.cpp  amorpm.h  amorsessionwidget.cpp  amorsessionwidget.h  amorthememanager.cpp  amorthememanager.h  amortips.cpp  amortips.h  amorwidget.cpp  amorwidget.h  main.cpp  org.kde.amor.desktop  org.kde.amor.xml  queueitem.cpp  queueitem.h  version.h
(+69 files in other folders)
