# Add all your pic files here
amor_DATA = b-f.xpm b-f2.xpm b1-r.xpm b1.xpm b2-r.xpm b2.xpm b3-r.xpm\
            b3.xpm b4-r.xpm b4.xpm bcol1.xpm bcol2.xpm bdrib1.xpm bdrib2.xpm\
            bdrib3.xpm bdrib4.xpm bdrib5.xpm bdrib6.xpm bdrib7.xpm bdrop.xpm\
            bgo1.xpm bgo2.xpm bgo3.xpm bgo4.xpm bgo5.xpm bgo6.xpm bgo7.xpm\
            bh1.xpm bpof1.xpm bpof2.xpm bpof3.xpm bpof4.xpm bpof5.xpm\
            bpof6.xpm sa1.xpm sa2.xpm sa2a.xpm sa2b.xpm sa2c.xpm salut.xpm\
            salut1.xpm

# This is where it will all be installed
amordir = $(kde_datadir)/amor/b
