# Add all your pic files here
data_DATA = blob.xpm blob_b1.xpm blob_b2.xpm blob_e1.xpm blob_ex1.xpm\
            blob_g1.xpm blob_g2.xpm blob_gl1.xpm blob_gl2.xpm blob_gl3.xpm\
            blob_h1.xpm blob_h2.xpm blob_h3.xpm\
            blob_s1.xpm blob_s2.xpm blob_s3.xpm\
            blob_z1.xpm blob_z2.xpm blob_z3.xpm\
            blob_r45.xpm blob_r90.xpm blob_r135.xpm blob_r180.xpm\
            blob_r225.xpm blob_r270.xpm blob_r315.xpm\
            blob_f1.xpm blob_f2.xpm blob_f3.xpm\
            blob_sl1.xpm blob_sl2.xpm blob_sl3.xpm blob_sl4.xpm\
            blob_jet1.xpm blob_jet2.xpm blob_jet3.xpm blob_jet4.xpm\
            blob_l_jet1.xpm blob_l_jet2.xpm blob_l_jet3.xpm blob_l_jet4.xpm\
            blob_fire2.xpm blob_fire5.xpm blob_fire8.xpm\
            blob_fire10.xpm blob_fire3.xpm blob_fire6.xpm blob_fire9.xpm\
            blob_fire11.xpm blob_fire4.xpm blob_fire7.xpm\
            blob_r_turn1.xpm blob_r_turn2.xpm blob_r_turn3.xpm blob_r_turn4.xpm\
            blob_l_turn1.xpm blob_l_turn2.xpm blob_l_turn3.xpm blob_l_turn4.xpm\
            blob_BeamDown1.xpm blob_BeamDown2.xpm blob_BeamDown3.xpm\
            blob_BeamDown4.xpm blob_BeamDown5.xpm blob_BeamDown6.xpm\
            blob_BeamDown7.xpm blob_BeamDown8.xpm blob_BeamDown9.xpm\
            blob_BeamUp1.xpm blob_BeamUp2.xpm blob_BeamUp3.xpm\
            blob_BeamUp4.xpm blob_BeamUp5.xpm blob_BeamUp6.xpm\
            blob_BeamUp7.xpm blob_BeamUp8.xpm blob_BeamUp9.xpm\
            blob_BeamUp10.xpm

# This is where it will all be installed
datadir = $(kde_datadir)/amor/blob
