# Add all your pic files here
amor_DATA = ghost_1.xpm ghost_2.xpm ghost_z1.xpm ghost_z2.xpm ghost_z3.xpm\
            ghost_z4.xpm ghost_z5.xpm ghost_e.xpm\
            ghost_m1.xpm ghost_m2.xpm ghost_m3.xpm ghost_m4.xpm ghost_m5.xpm\
            ghost_m6.xpm ghost_m7.xpm

# This is where it will all be installed
amordir = $(kde_datadir)/amor/ghost
