# Add all your pic files here
data_DATA = claw1.xpm claw2.xpm jump1.xpm jump2.xpm jump3.xpm jump4.xpm \
            jumpl1.xpm jumpl2.xpm jumpl3.xpm jumpl4.xpm lick.xpm lick2.xpm \
            run1.xpm run2.xpm run3.xpm run4.xpm scratch1.xpm scratch2.xpm \
            scratch3.xpm scratch4.xpm sit.xpm sitleft.xpm sleep1.xpm \
            sleep2.xpm surprise.xpm tail.xpm yawn.xpm

# This is where it will all be installed
datadir = $(kde_datadir)/amor/neko
