# Add all your pic files here
amor_DATA = pinguin.xpm \
            walk_l1.xpm walk_l2.xpm walk_l3.xpm walk_l4.xpm walk_l5.xpm \
            walk_l6.xpm walk_l7.xpm walk_l8.xpm \
            walk_r1.xpm walk_r2.xpm walk_r3.xpm walk_r4.xpm walk_r5.xpm \
            walk_r6.xpm walk_r7.xpm walk_r8.xpm \
            floater1.xpm floater2.xpm floater3.xpm floater4.xpm \
            floater5.xpm floater6.xpm floater7.xpm floater8.xpm \
            faller1.xpm faller2.xpm faller3.xpm faller4.xpm \
            faller5.xpm faller6.xpm faller7.xpm faller8.xpm \
            tumble1.xpm tumble2.xpm tumble3.xpm tumble4.xpm \
            tumble5.xpm tumble6.xpm tumble7.xpm tumble8.xpm \
            bomber1.xpm bomber2.xpm bomber3.xpm bomber4.xpm \
            bomber5.xpm bomber6.xpm bomber7.xpm bomber8.xpm \
            bomber9.xpm bomber10.xpm bomber11.xpm bomber12.xpm \
            bomber13.xpm bomber14.xpm bomber15.xpm bomber16.xpm \
            digger1.xpm digger2.xpm digger3.xpm digger4.xpm \
            digger5.xpm digger6.xpm digger7.xpm digger8.xpm \
            digger9.xpm digger10.xpm digger11.xpm digger12.xpm \
            digger13.xpm digger14.xpm \
            bash_l1.xpm bash_l2.xpm bash_l3.xpm bash_l4.xpm \
            bash_l5.xpm bash_l6.xpm bash_l7.xpm bash_l8.xpm \
            bash_l9.xpm bash_l10.xpm bash_l11.xpm bash_l12.xpm \
            bash_r1.xpm bash_r2.xpm bash_r3.xpm bash_r4.xpm \
            bash_r5.xpm bash_r6.xpm bash_r7.xpm bash_r8.xpm \
            bash_r9.xpm bash_r10.xpm bash_r11.xpm bash_r12.xpm \
            blocker1.xpm blocker2.xpm blocker3.xpm blocker4.xpm \
            blocker5.xpm blocker6.xpm

# This is where it will all be installed
amordir = $(kde_datadir)/amor/pingu
