# Add all your pic files here
data_DATA = yy-1.xpm yy-2.xpm yy-3.xpm yy-4.xpm yy-5.xpm yy-6.xpm yy-7.xpm \
	    yy-8.xpm yy-9.xpm yy.xpm yy105.xpm yy120.xpm yy135.xpm yy15.xpm \
	    yy150.xpm yy165.xpm yy180.xpm yy195.xpm yy210.xpm yy225.xpm \
	    yy240.xpm yy255.xpm yy270.xpm yy285.xpm yy30.xpm yy300.xpm \
	    yy315.xpm yy330.xpm yy345.xpm yy45.xpm yy60.xpm yy75.xpm \
	    yy90.xpm yyx10.xpm yyx12.xpm yyx14.xpm yyx16.xpm yyx18.xpm \
	    yyx20.xpm yyx22.xpm yyx24.xpm yyx26.xpm yyx28.xpm yyx30.xpm \
	    yyx6.xpm yyx8.xpm

# This is where it will all be installed
datadir = $(kde_datadir)/amor/tao
