# Add all your pic files here
amor_DATA = w-a1.xpm w-a2.xpm w-b1.xpm w-b2.xpm w-be1.xpm w-be2.xpm \
            w-be3.xpm w-be4.xpm w-d1.xpm w-d2.xpm w-d3.xpm w-d4.xpm \
            w-d5.xpm w-dr1.xpm w-e1.xpm w-l1.xpm w-l2.xpm w-l3.xpm \
            w-ml0.xpm w-ml1.xpm w-ml2.xpm w-ml3.xpm w-mr0.xpm w-mr1.xpm \
            w-mr2.xpm w-mr3.xpm w-s1.xpm w-s2.xpm w-s3.xpm w-u1.xpm \
            w-u2.xpm w-u3.xpm w-wl1.xpm w-wl2.xpm w-wr1.xpm w-wr2.xpm

# This is where it will all be installed
amordir = $(kde_datadir)/amor/worm
