



########### install files ###############

install( FILES billy.png bonhomme.png ghost.png neko.png tux.png blob.png bsd.png eyes.png tao.png worm.png  DESTINATION ${DATA_INSTALL_DIR}/amor/pics/preview)




#original Makefile.am contents follow:

## Add all your pic files here
#amor_DATA = billy.png bonhomme.png ghost.png neko.png tux.png blob.png bsd.png eyes.png tao.png worm.png
#
## This is where it will all be installed
#amordir = $(kde_datadir)/amor/pics/preview
