



########### install files ###############

install( FILES billy.png bsd.png tux.png  DESTINATION ${DATA_INSTALL_DIR}/amor/pics/static)




#original Makefile.am contents follow:

## Add all your pic files here
#amor_DATA = billy.png bsd.png tux.png
#
## This is where it will all be installed
#amordir = $(kde_datadir)/amor/pics/static
