



########### install files ###############

install( FILES claw1.png              claw2.png              jump1.png              jump2.png              jump3.png              jump4.png              jumpl1.png              jumpl2.png              jumpl3.png              jumpl4.png              lick2.png              lick.png              run1.png              run2.png              run3.png              run4.png              scratch1.png              scratch2.png              scratch3.png              scratch4.png              sitleft.png              sit.png              sleep1.png              sleep2.png              surprise.png              tail.png              yawn.png  DESTINATION ${DATA_INSTALL_DIR}/amor/pics/animated/neko)




#original Makefile.am contents follow:

## Add all your pic files here
#amor_DATA = claw1.png \
#            claw2.png \
#            jump1.png \
#            jump2.png \
#            jump3.png \
#            jump4.png \
#            jumpl1.png \
#            jumpl2.png \
#            jumpl3.png \
#            jumpl4.png \
#            lick2.png \
#            lick.png \
#            run1.png \
#            run2.png \
#            run3.png \
#            run4.png \
#            scratch1.png \
#            scratch2.png \
#            scratch3.png \
#            scratch4.png \
#            sitleft.png \
#            sit.png \
#            sleep1.png \
#            sleep2.png \
#            surprise.png \
#            tail.png \
#            yawn.png
#
## This is where it will all be installed
#amordir = $(kde_datadir)/amor/pics/animated/neko
